--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0390.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0390.html
@@ -692,9 +692,14 @@
             <ins class="alt" title="nlp 1.00">15</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 215 1407 248 1435">
+        <span id="w_133_0" class="ocr_word" title="bbox 215 1407 248 1435">
           <span class="alternatives">
-            <ins title="nlp 2.00">"</ins>
+            <ins class="alt" title="nlp 2.00">“</ins>
+          </span>
+        </span>
+        <span id="w_133_1" class="ocr_word" title="bbox 215 1407 248 1435">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 260 1406 356 1470" lang="grc">
@@ -730,11 +735,6 @@
         <span id="w_140" class="ocr_word" title="bbox 1603 1402 1736 1454" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
-          </span>
-        </span>
-        <span id="w_141" class="ocr_word" title="bbox 1756 1422 1911 1454" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τοιούτων</ins>
           </span>
         </span>
       </span>
