--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0423.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0423.html
@@ -174,11 +174,6 @@
             <ins class="alt" title="nlp 2.00">κωφῷ,</ins>
           </span>
         </span>
-        <span id="w_30_1" class="ocr_word" title="bbox 796 533 977 579">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_31" class="ocr_word" title="bbox 1018 522 1217 567" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖθεν</ins>
@@ -186,7 +181,7 @@
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1242 519 1601 584" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παλινοστήσας</ins>
+            <ins title="nlp 2.00">παλινοστήσας καταλαβάνει</ins>
           </span>
         </span>
       </span>
@@ -596,7 +591,7 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1672 1312 1784 1357" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">μετ-</ins>
+            <ins title="nlp 2.00">μετεκαλοῦντο</ins>
           </span>
         </span>
       </span>
@@ -604,11 +599,6 @@
         <span id="w_115" class="ocr_word" title="bbox 30 1394 62 1426">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 87 1374 350 1419" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκαλοῦντο</ins>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 397 1388 481 1418" lang="grc">
