--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0606.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0606.html
@@ -235,11 +235,6 @@
             <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_43_1" class="ocr_word" title="bbox 649 640 656 706">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_44" class="ocr_word" title="bbox 689 641 874 705" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἰατρῶν</ins>
@@ -255,9 +250,14 @@
             <ins class="alt" title="nlp 1.00">μικρὰ</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1340 636 1719 704" lang="grc">
+        <span id="w_47_0" class="ocr_word" title="bbox 1340 636 1719 704">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεφροντικότες</ins>
+            <ins class="alt" title="nlp 2.00">πεφροντικότες</ins>
+          </span>
+        </span>
+        <span id="w_47_1" class="ocr_word" title="bbox 1340 636 1719 704">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τοῦ</ins>
           </span>
         </span>
       </span>
@@ -849,19 +849,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_165_0" class="ocr_word" title="bbox 1440 1571 1626 1638">
+        <span id="w_165_0_0" class="ocr_word" title="bbox 1440 1571 1626 1638">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[ἐμῶν]</ins>
           </span>
         </span>
-        <span id="w_165_1" class="ocr_word" title="bbox 1440 1571 1626 1638">
+        <span id="w_165_0_1" class="ocr_word" title="bbox 1440 1571 1626 1638">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1666 1591 1843 1639" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔφερον</ins>
           </span>
         </span>
       </span>
@@ -891,19 +886,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_173_0" class="ocr_word" title="bbox 1156 1643 1395 1715">
+        <span id="w_173_0_0" class="ocr_word" title="bbox 1156 1643 1395 1715">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[τροφ]ὰς</ins>
           </span>
         </span>
-        <span id="w_173_1" class="ocr_word" title="bbox 1156 1643 1395 1715">
+        <span id="w_173_0_1" class="ocr_word" title="bbox 1156 1643 1395 1715">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_174" class="ocr_word" title="bbox 1431 1668 1593 1699" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιεῖν</ins>
           </span>
         </span>
       </span>
@@ -923,12 +913,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_180_0" class="ocr_word" title="bbox 798 1723 1232 1792">
+        <span id="w_180_0_0" class="ocr_word" title="bbox 798 1723 1232 1792">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[προσ]φερόμενα</ins>
+            <ins class="alt" title="nlp 2.00">[προσ]φερόμενα</ins>
           </span>
         </span>
-        <span id="w_180_1" class="ocr_word" title="bbox 798 1723 1232 1792">
+        <span id="w_180_0_1" class="ocr_word" title="bbox 798 1723 1232 1792">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -941,11 +931,6 @@
         <span id="w_182" class="ocr_word" title="bbox 1363 1735 1422 1795" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῇ</ins>
-          </span>
-        </span>
-        <span id="w_183" class="ocr_word" title="bbox 1448 1735 1533 1792" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
@@ -1007,12 +992,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 144 1877 1841 1951">
-        <span id="w_196_0" class="ocr_word" title="bbox 144 1878 508 1947">
+        <span id="w_196_0_0" class="ocr_word" title="bbox 144 1878 508 1947">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[κενόσπουδα]</ins>
+            <ins class="alt" title="nlp 2.00">[κενόσπουδα]</ins>
           </span>
         </span>
-        <span id="w_196_1" class="ocr_word" title="bbox 144 1878 508 1947">
+        <span id="w_196_0_1" class="ocr_word" title="bbox 144 1878 508 1947">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1045,11 +1030,6 @@
         <span id="w_202" class="ocr_word" title="bbox 1167 1900 1263 1931" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 1289 1889 1474 1945" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰατρῶν</ins>
           </span>
         </span>
       </span>
@@ -1116,14 +1096,14 @@
             <ins class="alt" title="nlp 1.00">νοσήματος</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 859 2035 1294 2103" lang="grc">
+        <span id="w_219_0" class="ocr_word" title="bbox 1342 2056 1426 2086">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐπα|[κμάζ]</ins>
+            <ins class="alt" title="nlp 2.00">ἐπα|[κμάζ]οντος</ins>
           </span>
         </span>
-        <span id="w_219" class="ocr_word" title="bbox 1342 2056 1426 2086" lang="grc">
+        <span id="w_219_1" class="ocr_word" title="bbox 1342 2056 1426 2086">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 1464 2036 1843 2097" lang="grc">
@@ -1185,12 +1165,12 @@
             <ins class="alt" title="nlp 1.00">25</ins>
           </span>
         </span>
-        <span id="w_231_0" class="ocr_word" title="bbox 145 2188 379 2256">
+        <span id="w_231_0_0" class="ocr_word" title="bbox 145 2188 379 2256">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐφάνη.]</ins>
+            <ins class="alt" title="nlp 2.00">[ἐφάνη.]</ins>
           </span>
         </span>
-        <span id="w_231_1" class="ocr_word" title="bbox 145 2188 379 2256">
+        <span id="w_231_0_1" class="ocr_word" title="bbox 145 2188 379 2256">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1225,11 +1205,6 @@
             <ins class="alt" title="nlp 1.00">καθ’</ins>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 1288 2200 1432 2256" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμῶν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 143 2265 1983 2335">
         <span id="w_242" class="ocr_word" title="bbox 143 2269 437 2318" lang="grc">
@@ -1262,12 +1237,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_248_0" class="ocr_word" title="bbox 1263 2269 1525 2335">
+        <span id="w_248_0_0" class="ocr_word" title="bbox 1263 2269 1525 2335">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[σκοπ]εῖν</ins>
           </span>
         </span>
-        <span id="w_248_1" class="ocr_word" title="bbox 1263 2269 1525 2335">
+        <span id="w_248_0_1" class="ocr_word" title="bbox 1263 2269 1525 2335">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1280,11 +1255,6 @@
         <span id="w_250" class="ocr_word" title="bbox 1730 2288 1842 2328" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
-          </span>
-        </span>
-        <span id="w_251_0" class="ocr_word" title="bbox 1865 2292 1904 2325">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
       </span>
@@ -1314,12 +1284,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_258_0" class="ocr_word" title="bbox 1039 2346 1201 2412">
+        <span id="w_258_0_0" class="ocr_word" title="bbox 1039 2346 1201 2412">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[περὶ]</ins>
+            <ins class="alt" title="nlp 2.00">[πεὶ]</ins>
           </span>
         </span>
-        <span id="w_258_1" class="ocr_word" title="bbox 1039 2346 1201 2412">
+        <span id="w_258_0_1" class="ocr_word" title="bbox 1039 2346 1201 2412">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1327,11 +1297,6 @@
         <span id="w_259" class="ocr_word" title="bbox 1241 2345 1327 2396" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_260" class="ocr_word" title="bbox 1363 2345 1699 2414" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοκράτορα</ins>
           </span>
         </span>
       </span>
@@ -1388,12 +1353,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_273_0" class="ocr_word" title="bbox 450 2502 587 2568">
+        <span id="w_273_0_0" class="ocr_word" title="bbox 450 2502 587 2568">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ]</ins>
           </span>
         </span>
-        <span id="w_273_1" class="ocr_word" title="bbox 450 2502 587 2568">
+        <span id="w_273_0_1" class="ocr_word" title="bbox 450 2502 587 2568">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1433,11 +1398,6 @@
             <ins class="alt" title="nlp 1.00">σάλῳ</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1597 2522 1679 2551" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 79 2578 1839 2646">
         <span id="w_283" class="ocr_word" title="bbox 79 2600 120 2632">
@@ -1450,12 +1410,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_286_0" class="ocr_word" title="bbox 388 2579 537 2645">
+        <span id="w_286_0_0" class="ocr_word" title="bbox 388 2579 537 2645">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[ἦν,]</ins>
           </span>
         </span>
-        <span id="w_286_1" class="ocr_word" title="bbox 388 2579 537 2645">
+        <span id="w_286_0_1" class="ocr_word" title="bbox 388 2579 537 2645">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1485,19 +1445,14 @@
             <ins class="alt" title="nlp 1.00">φόβος</ins>
           </span>
         </span>
-        <span id="w_293" class="ocr_word" title="bbox 1722 2579 1806 2630" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 145 2651 1839 2724">
-        <span id="w_295_0" class="ocr_word" title="bbox 145 2651 438 2721">
+        <span id="w_295_0_0" class="ocr_word" title="bbox 145 2651 438 2721">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[κίνδυνος]</ins>
+            <ins class="alt" title="nlp 2.00">[κίνδυνος]</ins>
           </span>
         </span>
-        <span id="w_295_1" class="ocr_word" title="bbox 145 2651 438 2721">
+        <span id="w_295_0_1" class="ocr_word" title="bbox 145 2651 438 2721">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1517,21 +1472,11 @@
             <ins class="alt" title="nlp 1.00">συνεστήκεσαν.</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 1310 2651 1406 2721" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">εἶχε</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 259 2784 1841 2845">
         <span id="w_304" class="ocr_word" title="bbox 259 2790 283 2829">
           <span class="alternatives">
             <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
-        <span id="w_306_0" class="ocr_word" title="bbox 400 2786 472 2845">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">οἴ</ins>
           </span>
         </span>
         <span id="w_306_1" class="ocr_word" title="bbox 400 2786 472 2845">
