--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0391.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0391.html
@@ -613,8 +613,7 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1397 1251 1407 1261">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1456 1232 1482 1283" lang="grc">
