--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0392.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0392.html
@@ -551,8 +551,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 696 1197 707 1208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 750 1182 794 1230" lang="grc">
