--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0394.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0394.html
@@ -504,9 +504,14 @@
             <ins class="alt" title="nlp 1.00">τηνικαῦτα</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 815 1154 1075 1220" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 815 1154 1075 1220">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλάμβανε.</ins>
+            <ins class="alt" title="nlp 2.00">ἐλάμβανε.</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 815 1154 1075 1220">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 1116 1154 1336 1214" lang="grc">
@@ -527,11 +532,6 @@
         <span id="w_99" class="ocr_word" title="bbox 1574 1174 1664 1219" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_100" class="ocr_word" title="bbox 1688 1152 1912 1220" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γνώμην,</ins>
           </span>
         </span>
       </span>
@@ -1137,19 +1137,19 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1090 2242 1402 2305" lang="grc">
+        <span id="w_217_0" class="ocr_word" title="bbox 1090 2242 1402 2305">
           <span class="alternatives">
-            <ins title="nlp 2.00">Βαἱμοῦντον</ins>
+            <ins class="alt" title="nlp 2.00">Βαϊμοῦντον</ins>
+          </span>
+        </span>
+        <span id="w_217_1" class="ocr_word" title="bbox 1090 2242 1402 2305">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1448 2240 1723 2308" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπονοῆσαι</ins>
-          </span>
-        </span>
-        <span id="w_219" class="ocr_word" title="bbox 1769 2249 1909 2308" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅλως,</ins>
           </span>
         </span>
       </span>
@@ -1198,7 +1198,7 @@
       <span class="ocr_line" title="bbox 218 2396 1909 2466">
         <span id="w_228" class="ocr_word" title="bbox 218 2397 443 2447" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">'“τούτου</ins>
+            <ins title="nlp 2.00">“τούτου</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 482 2417 573 2461" lang="grc">
