--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0395.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0395.html
@@ -649,9 +649,14 @@
             <ins class="alt" title="nlp 1.00">μηδέποτε</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 611 1285 985 1353" lang="grc">
+        <span id="w_122_0" class="ocr_word" title="bbox 611 1285 985 1353">
           <span class="alternatives">
-            <ins title="nlp 2.00">προτιμωμένῳ.</ins>
+            <ins class="alt" title="nlp 2.00">προτιμωμένῳ·</ins>
+          </span>
+        </span>
+        <span id="w_122_1" class="ocr_word" title="bbox 611 1285 985 1353">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1035 1294 1270 1336" lang="grc">
@@ -667,11 +672,6 @@
         <span id="w_125" class="ocr_word" title="bbox 1436 1283 1672 1335" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἁπάντων</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1710 1305 1812 1336" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
       </span>
