--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0607.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0607.html
@@ -68,14 +68,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_11_0" class="ocr_word" title="bbox 1453 335 1508 400">
+        <span id="w_11_0_0" class="ocr_word" title="bbox 1453 335 1508 400">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[ἡ</ins>
           </span>
         </span>
-        <span id="w_11_1" class="ocr_word" title="bbox 1453 335 1508 400">
+        <span id="w_11_0_1" class="ocr_word" title="bbox 1453 335 1508 400">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">αὒγου]στα,</ins>
           </span>
         </span>
       </span>
@@ -565,9 +565,14 @@
             <ins class="alt" title="nlp 1.00">ἄγοντος</ins>
           </span>
         </span>
-        <span id="w_110" class="ocr_word" title="bbox 750 1178 963 1243" lang="grc">
+        <span id="w_110_0" class="ocr_word" title="bbox 750 1178 963 1243">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πέμπτη</ins>
+            <ins class="alt" title="nlp 2.00">(πέμπτη</ins>
+          </span>
+        </span>
+        <span id="w_110_1" class="ocr_word" title="bbox 750 1178 963 1243">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 998 1181 1052 1228" lang="grc">
@@ -593,11 +598,6 @@
         <span id="w_115" class="ocr_word" title="bbox 1345 1182 1611 1244" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">τηνικαῦτα</ins>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1650 1183 1856 1247" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἑβδομάδος</ins>
           </span>
         </span>
       </span>
@@ -1305,14 +1305,14 @@
             <ins class="alt" title="nlp 1.00">ἐσχάτης</ins>
           </span>
         </span>
-        <span id="w_252_0" class="ocr_word" title="bbox 1261 2332 1732 2401">
+        <span id="w_252_0_0" class="ocr_word" title="bbox 1261 2332 1732 2401">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐπιγε]|γενημένης</ins>
+            <ins class="alt" title="nlp 2.00">[ἐπιγε]|γενημένης</ins>
           </span>
         </span>
-        <span id="w_252_1" class="ocr_word" title="bbox 1261 2332 1732 2401">
+        <span id="w_252_0_1" class="ocr_word" title="bbox 1261 2332 1732 2401">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τῷ</ins>
           </span>
         </span>
       </span>
@@ -1446,19 +1446,14 @@
             <ins class="alt" title="nlp 1.00">ἐπλήττετο</ins>
           </span>
         </span>
-        <span id="w_279_0" class="ocr_word" title="bbox 1134 2567 1243 2631">
+        <span id="w_279_0_0" class="ocr_word" title="bbox 1134 2567 1243 2631">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
-        <span id="w_279_1" class="ocr_word" title="bbox 1134 2567 1243 2631">
+        <span id="w_279_0_1" class="ocr_word" title="bbox 1134 2567 1243 2631">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_280" class="ocr_word" title="bbox 1279 2563 1504 2631" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐθρήνει]</ins>
+            <ins class="alt" title="nlp 2.00">ἐθήνει]</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1539 2569 1545 2629">
@@ -1493,12 +1488,12 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_288_0" class="ocr_word" title="bbox 883 2639 1157 2711">
+        <span id="w_288_0_0" class="ocr_word" title="bbox 883 2639 1157 2711">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[ἐβούλετο]</ins>
+            <ins class="alt" title="nlp 2.00">[ἐβούλετο]</ins>
           </span>
         </span>
-        <span id="w_288_1" class="ocr_word" title="bbox 883 2639 1157 2711">
+        <span id="w_288_0_1" class="ocr_word" title="bbox 883 2639 1157 2711">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1516,11 +1511,6 @@
         <span id="w_291" class="ocr_word" title="bbox 1381 2637 1556 2690" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτίκα</ins>
-          </span>
-        </span>
-        <span id="w_292" class="ocr_word" title="bbox 1603 2633 1691 2705" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -1597,9 +1587,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_308_0" class="ocr_word" title="bbox 1632 2790 1854 2858">
+        <span id="w_308_0_0" class="ocr_word" title="bbox 1632 2790 1854 2858">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[πάθους</ins>
+            <ins class="alt" title="nlp 2.00">[πάθους</ins>
           </span>
         </span>
       </span>
