--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0396.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0396.html
@@ -678,9 +678,14 @@
             <ins class="alt" title="nlp 1.00">ἐφ’</ins>
           </span>
         </span>
-        <span id="w_128" class="ocr_word" title="bbox 891 1324 929 1353">
+        <span id="w_128_0" class="ocr_word" title="bbox 891 1324 929 1353">
           <span class="alternatives">
-            <ins title="nlp 2.00">ᾦ</ins>
+            <ins class="alt" title="nlp 2.00">ᾧ</ins>
+          </span>
+        </span>
+        <span id="w_128_1" class="ocr_word" title="bbox 891 1324 929 1353">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_129" class="ocr_word" title="bbox 970 1308 1326 1354" lang="grc">
@@ -696,11 +701,6 @@
         <span id="w_131" class="ocr_word" title="bbox 1527 1302 1662 1363" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐντὸς</ins>
-          </span>
-        </span>
-        <span id="w_132" class="ocr_word" title="bbox 1699 1305 1916 1364" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Νικαίας</ins>
           </span>
         </span>
       </span>
@@ -866,9 +866,14 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 642 1616 984 1680" lang="grc">
+        <span id="w_164_0" class="ocr_word" title="bbox 642 1616 984 1680">
           <span class="alternatives">
-            <ins title="nlp 2.00">Boυτουμίτην</ins>
+            <ins class="alt" title="nlp 2.00">Βουτουμίτην</ins>
+          </span>
+        </span>
+        <span id="w_164_1" class="ocr_word" title="bbox 642 1616 984 1680">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_165" class="ocr_word" title="bbox 1020 1616 1279 1680" lang="grc">
@@ -884,11 +889,6 @@
         <span id="w_167" class="ocr_word" title="bbox 1686 1635 1768 1665" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1807 1633 1917 1681" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
       </span>
