--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0399.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0399.html
@@ -263,9 +263,14 @@
             <ins class="alt" title="nlp 1.00">φέροντες,</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 416 663 486 716" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 416 663 486 716">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἵν'</ins>
+            <ins class="alt" title="nlp 2.00">ἵν’</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 416 663 486 716">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 518 664 646 715" lang="grc">
@@ -296,11 +301,6 @@
         <span id="w_54" class="ocr_word" title="bbox 1614 687 1658 718" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
-          </span>
-        </span>
-        <span id="w_55" class="ocr_word" title="bbox 1694 668 1815 734" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βάρβαροι</ins>
           </span>
         </span>
       </span>
@@ -557,7 +557,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1507 1134 1659 1196">
           <span class="alternatives">
-            <ins title="nlp 2.00"> “πᾶν,</ins>
+            <ins title="nlp 2.00">“πᾶν,</ins>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 1698 1152 1815 1196" lang="grc">
@@ -938,9 +938,14 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_178" class="ocr_word" title="bbox 713 1834 982 1895" lang="grc">
+        <span id="w_178_0" class="ocr_word" title="bbox 713 1834 982 1895">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΚΟμνηνοῦ</ins>
+            <ins class="alt" title="nlp 2.00">Κομνηνοῦ</ins>
+          </span>
+        </span>
+        <span id="w_178_1" class="ocr_word" title="bbox 713 1834 982 1895">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1030 1848 1190 1895" lang="grc">
@@ -961,11 +966,6 @@
         <span id="w_182" class="ocr_word" title="bbox 1471 1829 1687 1893" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀδελφοῦ</ins>
-          </span>
-        </span>
-        <span id="w_183" class="ocr_word" title="bbox 1726 1851 1814 1880" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">αὐτοῦ</ins>
           </span>
         </span>
       </span>
@@ -1183,9 +1183,14 @@
             <ins class="alt" title="nlp 1.00">ἐπεὶ</ins>
           </span>
         </span>
-        <span id="w_225" class="ocr_word" title="bbox 1499 2217 1528 2265" lang="grc">
+        <span id="w_225_0" class="ocr_word" title="bbox 1499 2217 1528 2265">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ’ ὁ</ins>
+            <ins class="alt" title="nlp 2.00">δ’</ins>
+          </span>
+        </span>
+        <span id="w_225_1" class="ocr_word" title="bbox 1499 2217 1528 2265">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1651 2221 1812 2281" lang="grc">
