--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0608.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0608.html
@@ -89,12 +89,12 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_15_0" class="ocr_word" title="bbox 859 410 1280 479">
+        <span id="w_15_0_0" class="ocr_word" title="bbox 859 410 1280 479">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[κατεστρέ]|φετο</ins>
+            <ins class="alt" title="nlp 2.00">[κατεστρέ]|φετο</ins>
           </span>
         </span>
-        <span id="w_15_1" class="ocr_word" title="bbox 859 410 1280 479">
+        <span id="w_15_0_1" class="ocr_word" title="bbox 859 410 1280 479">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -102,11 +102,6 @@
         <span id="w_16" class="ocr_word" title="bbox 1326 432 1418 477" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1461 410 1692 476" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοιαύτην</ins>
           </span>
         </span>
       </span>
@@ -816,11 +811,6 @@
             <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_155_1" class="ocr_word" title="bbox 276 1651 284 1719">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_156" class="ocr_word" title="bbox 319 1645 440 1716" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶπε,</ins>
@@ -858,12 +848,7 @@
         </span>
         <span id="w_163" class="ocr_word" title="bbox 1477 1671 1531 1704" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_164" class="ocr_word" title="bbox 1564 1652 1572 1720">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
+            <ins title="nlp 2.00">τὸ | [τρα]ῦμα</ins>
           </span>
         </span>
       </span>
@@ -987,9 +972,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 1029 1886 1122 1951" lang="grc">
+        <span id="w_190_0" class="ocr_word" title="bbox 1029 1886 1122 1951">
           <span class="alternatives">
-            <ins title="nlp 2.00">πάντ᾿ </ins>
+            <ins class="alt" title="nlp 2.00">[πάντ᾿</ins>
+          </span>
+        </span>
+        <span id="w_190_1" class="ocr_word" title="bbox 1029 1886 1122 1951">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1225 1885 1415 1952" lang="grc">
@@ -1005,11 +995,6 @@
         <span id="w_193" class="ocr_word" title="bbox 1617 1882 1682 1945" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1704 1887 1855 1936" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
           </span>
         </span>
       </span>
@@ -1071,12 +1056,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_207_0" class="ocr_word" title="bbox 703 2040 882 2106">
+        <span id="w_207_0_0" class="ocr_word" title="bbox 703 2040 882 2106">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[γοῦν]</ins>
           </span>
         </span>
-        <span id="w_207_1" class="ocr_word" title="bbox 703 2040 882 2106">
+        <span id="w_207_0_1" class="ocr_word" title="bbox 703 2040 882 2106">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1096,11 +1081,6 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 1514 2040 1660 2106" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγου</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 155 2114 1909 2183">
         <span id="w_214" class="ocr_word" title="bbox 479 2118 486 2183">
@@ -1108,9 +1088,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 521 2118 648 2182" lang="grc">
+        <span id="w_215_0" class="ocr_word" title="bbox 521 2118 648 2182">
           <span class="alternatives">
-            <ins title="nlp 2.00">νῦν</ins>
+            <ins class="alt" title="nlp 2.00">[νῦν</ins>
+          </span>
+        </span>
+        <span id="w_215_1" class="ocr_word" title="bbox 521 2118 648 2182">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 683 2118 800 2183" lang="grc">
@@ -1148,11 +1133,6 @@
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_223" class="ocr_word" title="bbox 1874 2149 1909 2180">
-          <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 91 2191 1852 2261">
         <span id="w_224" class="ocr_word" title="bbox 91 2219 134 2251">
@@ -1170,12 +1150,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_227_0" class="ocr_word" title="bbox 365 2195 677 2261">
+        <span id="w_227_0_0" class="ocr_word" title="bbox 365 2195 677 2261">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[διακονίας]</ins>
+            <ins class="alt" title="nlp 2.00">[διακονίας]</ins>
           </span>
         </span>
-        <span id="w_227_1" class="ocr_word" title="bbox 365 2195 677 2261">
+        <span id="w_227_0_1" class="ocr_word" title="bbox 365 2195 677 2261">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1203,11 +1183,6 @@
         <span id="w_232" class="ocr_word" title="bbox 1296 2208 1513 2258" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κινήσεις</ins>
-          </span>
-        </span>
-        <span id="w_233" class="ocr_word" title="bbox 1546 2199 1549 2259">
-          <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
       </span>
@@ -1294,9 +1269,9 @@
             <ins class="alt" title="nlp 2.00">Ρ.</ins>
           </span>
         </span>
-        <span id="w_250_1" class="ocr_word" title="bbox 1876 2374 1914 2407">
+        <span id="w_250_1_0" class="ocr_word" title="bbox 1876 2374 1914 2407">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">50</ins>
           </span>
         </span>
       </span>
@@ -1363,9 +1338,14 @@
             <ins title="nlp 2.00">. . . . . . .</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1015 2502 1071 2570">
+        <span id="w_266_0" class="ocr_word" title="bbox 1015 2502 1071 2570">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὁ</ins>
+            <ins class="alt" title="nlp 2.00">[ὁ</ins>
+          </span>
+        </span>
+        <span id="w_266_1" class="ocr_word" title="bbox 1015 2502 1071 2570">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1096 2502 1436 2570" lang="grc">
@@ -1376,11 +1356,6 @@
         <span id="w_268" class="ocr_word" title="bbox 1462 2501 1730 2570" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναφέρειν</ins>
-          </span>
-        </span>
-        <span id="w_269" class="ocr_word" title="bbox 1765 2524 1851 2569" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
