--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0400.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0400.html
@@ -136,9 +136,14 @@
             <ins class="alt" title="nlp 1.00">Γονάτην</ins>
           </span>
         </span>
-        <span id="w_24" class="ocr_word" title="bbox 580 460 1040 527" lang="grc">
+        <span id="w_24_0" class="ocr_word" title="bbox 580 460 1040 527">
           <span class="alternatives">
-            <ins title="nlp 2.00">παρηκολουθήκει.</ins>
+            <ins class="alt" title="nlp 2.00">παρηκολουθήκει·</ins>
+          </span>
+        </span>
+        <span id="w_24_1" class="ocr_word" title="bbox 580 460 1040 527">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 1083 457 1108 510" lang="grc">
@@ -164,11 +169,6 @@
         <span id="w_29" class="ocr_word" title="bbox 1667 462 1765 526" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἤδη</ins>
-          </span>
-        </span>
-        <span id="w_30" class="ocr_word" title="bbox 1805 483 1890 529" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ῥη-</ins>
           </span>
         </span>
       </span>
@@ -356,9 +356,14 @@
             <ins class="alt" title="nlp 1.00">ἐφ’</ins>
           </span>
         </span>
-        <span id="w_66" class="ocr_word" title="bbox 577 870 615 900">
+        <span id="w_66_0" class="ocr_word" title="bbox 577 870 615 900">
           <span class="alternatives">
-            <ins title="nlp 2.00">ᾦ</ins>
+            <ins class="alt" title="nlp 2.00">ᾧ</ins>
+          </span>
+        </span>
+        <span id="w_66_1" class="ocr_word" title="bbox 577 870 615 900">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 667 867 779 908" lang="grc">
@@ -389,11 +394,6 @@
         <span id="w_72" class="ocr_word" title="bbox 1568 867 1653 898" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 1707 849 1891 913" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τείχους</ins>
           </span>
         </span>
       </span>
@@ -443,14 +443,14 @@
             <ins title="nlp 2.00">διορύττειν.</ins>
           </span>
         </span>
-        <span id="w_83" class="ocr_word" title="bbox 1915 942 1956 974">
+        <span id="w_83_0" class="ocr_word" title="bbox 1915 942 1956 974">
           <span class="alternatives">
-            <ins title="nlp 2.00">ρ.</ins>
+            <ins class="alt" title="nlp 2.00">P.</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1972 941 1992 974">
+        <span id="w_83_1" class="ocr_word" title="bbox 1915 942 1956 974">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">3</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1157,9 +1157,14 @@
             <ins class="alt" title="nlp 1.00">κόμησιν</ins>
           </span>
         </span>
-        <span id="w_221" class="ocr_word" title="bbox 586 2246 922 2310" lang="grc">
+        <span id="w_221_0" class="ocr_word" title="bbox 586 2246 922 2310">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐκπέπομφεν.</ins>
+            <ins class="alt" title="nlp 2.00">ἐκπέπομφεν·</ins>
+          </span>
+        </span>
+        <span id="w_221_1" class="ocr_word" title="bbox 586 2246 922 2310">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_222" class="ocr_word" title="bbox 972 2264 1156 2305" lang="grc">
@@ -1180,11 +1185,6 @@
         <span id="w_225" class="ocr_word" title="bbox 1443 2265 1541 2295" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_226" class="ocr_word" title="bbox 1579 2244 1891 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρατυχόν-</ins>
           </span>
         </span>
       </span>
