--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0144.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0144.html
@@ -292,11 +292,6 @@
             <ins class="alt" title="nlp 2.00">ἦν</ins>
           </span>
         </span>
-        <span id="w_55_1" class="ocr_word" title="bbox 1018 697 1083 760">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_56" class="ocr_word" title="bbox 1126 691 1157 758" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
@@ -309,7 +304,7 @@
         </span>
         <span id="w_58" class="ocr_word" title="bbox 1411 692 1545 741" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑστία</ins>
+            <ins title="nlp 2.00">ἑστία καταγώγιον </ins>
           </span>
         </span>
       </span>
@@ -406,14 +401,9 @@
             <ins class="alt" title="nlp 2.00">συνδειπνοῦντας</ins>
           </span>
         </span>
-        <span id="w_77_1" class="ocr_word" title="bbox 1538 849 1895 898">
+        <span id="w_78_0" class="ocr_word" title="bbox 1919 861 1958 895">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
-        <span id="w_78" class="ocr_word" title="bbox 1919 861 1958 895" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ρ.</ins>
+            <ins class="alt" title="nlp 2.00">Ρ.88</ins>
           </span>
         </span>
       </span>
@@ -559,11 +549,6 @@
             <ins class="alt" title="nlp 2.00">φοβερά,</ins>
           </span>
         </span>
-        <span id="w_110_1" class="ocr_word" title="bbox 217 1161 427 1227">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_111" class="ocr_word" title="bbox 474 1157 758 1226" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀνθρώποις</ins>
@@ -591,7 +576,7 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1540 1157 1652 1225" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περὶ</ins>
+            <ins title="nlp 2.00">περὶ ἡδονὰς</ins>
           </span>
         </span>
       </span>
