--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0609.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0609.html
@@ -33,12 +33,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 170 327 1848 406">
-        <span id="w_4_0" class="ocr_word" title="bbox 170 329 365 394">
+        <span id="w_4_0_0" class="ocr_word" title="bbox 170 329 365 394">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[μενον,</ins>
           </span>
         </span>
-        <span id="w_4_1" class="ocr_word" title="bbox 170 329 365 394">
+        <span id="w_4_0_1" class="ocr_word" title="bbox 170 329 365 394">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -66,11 +66,6 @@
         <span id="w_9" class="ocr_word" title="bbox 1065 355 1332 399" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τηνικαῦτα</ins>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1358 343 1483 400" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡμᾶς</ins>
           </span>
         </span>
       </span>
@@ -157,12 +152,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_29_0" class="ocr_word" title="bbox 1228 490 1337 555">
+        <span id="w_29_0_0" class="ocr_word" title="bbox 1228 490 1337 555">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
-        <span id="w_29_1" class="ocr_word" title="bbox 1228 490 1337 555">
+        <span id="w_29_0_1" class="ocr_word" title="bbox 1228 490 1337 555">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -170,11 +165,6 @@
         <span id="w_30" class="ocr_word" title="bbox 1372 491 1613 555" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">γένω]μαι</ins>
-          </span>
-        </span>
-        <span id="w_31" class="ocr_word" title="bbox 1659 492 1740 540" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -214,12 +204,12 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_40_0" class="ocr_word" title="bbox 936 566 1218 632">
+        <span id="w_40_0_0" class="ocr_word" title="bbox 936 566 1218 632">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[βασιλ]ίδα</ins>
+            <ins class="alt" title="nlp 2.00">[βασιλ]ίδα</ins>
           </span>
         </span>
-        <span id="w_40_1" class="ocr_word" title="bbox 936 566 1218 632">
+        <span id="w_40_0_1" class="ocr_word" title="bbox 936 566 1218 632">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -234,21 +224,11 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1494 567 1676 617" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόντον</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 103 636 1884 710">
         <span id="w_45" class="ocr_word" title="bbox 103 652 136 685">
           <span class="alternatives">
             <ins title="nlp 2.00">Β</ins>
-          </span>
-        </span>
-        <span id="w_46" class="ocr_word" title="bbox 157 636 409 703" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βλημένην</ins>
           </span>
         </span>
         <span id="w_47" class="ocr_word" title="bbox 445 659 545 688" lang="grc">
@@ -345,12 +325,12 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_65_0" class="ocr_word" title="bbox 266 791 446 856">
+        <span id="w_65_0_0" class="ocr_word" title="bbox 266 791 446 856">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[πάλιν</ins>
+            <ins class="alt" title="nlp 2.00">[κάλιν</ins>
           </span>
         </span>
-        <span id="w_65_1" class="ocr_word" title="bbox 266 791 446 856">
+        <span id="w_65_0_1" class="ocr_word" title="bbox 266 791 446 856">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -373,11 +353,6 @@
         <span id="w_70" class="ocr_word" title="bbox 1155 816 1240 860" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
-          </span>
-        </span>
-        <span id="w_71" class="ocr_word" title="bbox 1268 797 1494 863" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δευτέρας</ins>
           </span>
         </span>
       </span>
@@ -694,12 +669,12 @@
             <ins class="alt" title="nlp 1.00">κλινοπετῆ</ins>
           </span>
         </span>
-        <span id="w_133_0" class="ocr_word" title="bbox 718 1338 818 1403">
+        <span id="w_133_0_0" class="ocr_word" title="bbox 718 1338 818 1403">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">[εἴς</ins>
+            <ins class="alt" title="nlp 2.00">[εἲς</ins>
           </span>
         </span>
-        <span id="w_133_1" class="ocr_word" title="bbox 718 1338 818 1403">
+        <span id="w_133_0_1" class="ocr_word" title="bbox 718 1338 818 1403">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -724,11 +699,6 @@
             <ins title="nlp 2.00">ἕτερον</ins>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 1417 1354 1500 1385" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 155 1410 1905 1481">
         <span id="w_140" class="ocr_word" title="bbox 155 1431 443 1477" lang="grc">
@@ -751,9 +721,14 @@
             <ins class="alt" title="nlp 1.00">γε</ins>
           </span>
         </span>
-        <span id="w_144" class="ocr_word" title="bbox 805 1412 977 1481">
+        <span id="w_144_0" class="ocr_word" title="bbox 805 1412 977 1481">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἔχ]|οι</ins>
+            <ins class="alt" title="nlp 2.00">[ἒχ]|οι</ins>
+          </span>
+        </span>
+        <span id="w_144_1" class="ocr_word" title="bbox 805 1412 977 1481">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 1015 1413 1419 1478" lang="grc">
@@ -764,11 +739,6 @@
         <span id="w_146" class="ocr_word" title="bbox 1460 1410 1843 1464" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀναπνεύσαντα</ins>
-          </span>
-        </span>
-        <span id="w_147" class="ocr_word" title="bbox 1866 1433 1905 1464">
-          <span class="alternatives">
-            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
@@ -1028,12 +998,12 @@
             <ins class="alt" title="nlp 1.00">ἠπείγετο</ins>
           </span>
         </span>
-        <span id="w_203_0" class="ocr_word" title="bbox 534 1877 630 1942">
+        <span id="w_203_0_0" class="ocr_word" title="bbox 534 1877 630 1942">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[εἰς</ins>
           </span>
         </span>
-        <span id="w_203_1" class="ocr_word" title="bbox 534 1877 630 1942">
+        <span id="w_203_0_1" class="ocr_word" title="bbox 534 1877 630 1942">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1071,11 +1041,6 @@
         <span id="w_210" class="ocr_word" title="bbox 1546 1876 1599 1924" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_211" class="ocr_word" title="bbox 1628 1895 1678 1925" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
       </span>
@@ -1120,9 +1085,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1656 1953 1837 2002" lang="grc">
+        <span id="w_222_0" class="ocr_word" title="bbox 1656 1953 1837 2002">
           <span class="alternatives">
-            <ins title="nlp 2.00">παντά-</ins>
+            <ins class="alt" title="nlp 2.00">πανατάπασιν</ins>
           </span>
         </span>
       </span>
@@ -1130,11 +1095,6 @@
         <span id="w_223" class="ocr_word" title="bbox 94 2049 129 2081">
           <span class="alternatives">
             <ins title="nlp 2.00">D</ins>
-          </span>
-        </span>
-        <span id="w_224" class="ocr_word" title="bbox 151 2045 307 2081" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶσιν</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 334 2070 631 2086">
@@ -1291,14 +1251,14 @@
             <ins class="alt" title="nlp 1.00">ἀρχαὶ</ins>
           </span>
         </span>
-        <span id="w_255_0" class="ocr_word" title="bbox 1727 2184 1836 2248">
+        <span id="w_255_0_0" class="ocr_word" title="bbox 1727 2184 1836 2248">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[καὶ</ins>
           </span>
         </span>
-        <span id="w_255_1" class="ocr_word" title="bbox 1727 2184 1836 2248">
+        <span id="w_255_0_1" class="ocr_word" title="bbox 1727 2184 1836 2248">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">25</ins>
           </span>
         </span>
       </span>
@@ -1503,12 +1463,12 @@
             <ins class="alt" title="nlp 1.00">κεφαλῇ</ins>
           </span>
         </span>
-        <span id="w_297_0" class="ocr_word" title="bbox 370 2650 550 2716">
+        <span id="w_297_0_0" class="ocr_word" title="bbox 370 2650 550 2716">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">[αὐτοῦ</ins>
           </span>
         </span>
-        <span id="w_297_1" class="ocr_word" title="bbox 370 2650 550 2716">
+        <span id="w_297_0_1" class="ocr_word" title="bbox 370 2650 550 2716">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -1546,11 +1506,6 @@
         <span id="w_304" class="ocr_word" title="bbox 1420 2664 1486 2693" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔτι</ins>
-          </span>
-        </span>
-        <span id="w_305" class="ocr_word" title="bbox 1523 2641 1831 2708" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀμπεχομένη</ins>
           </span>
         </span>
       </span>
