--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0145.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0145.html
@@ -48,11 +48,6 @@
             <ins class="alt" title="nlp 2.00">ρίου</ins>
           </span>
         </span>
-        <span id="w_6_1" class="ocr_word" title="bbox 128 337 235 402">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
-          </span>
-        </span>
         <span id="w_7" class="ocr_word" title="bbox 274 355 359 387" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
@@ -90,7 +85,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1552 342 1620 399" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἰς</ins>
+            <ins title="nlp 2.00">εἰς ἐγκωμίου</ins>
           </span>
         </span>
       </span>
